--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -2,7 +2,9 @@ version: 1.0
 runtime: python3
 build:
   commands:
-    - python -m pip install --upgrade pip setuptools wheel
-    - pip install --no-cache-dir -r requirements-apprunner.txt
+    prebuild:
+      - python -m pip install --upgrade pip setuptools wheel
+    build:
+      - pip install --no-cache-dir -r requirements-apprunner.txt
 run:
-  command: streamlit run streamlit_app.py --server.port 8080 --server.address 0.0.0.0 --server.headless true
+  command: streamlit run streamlit_app.py --server.port 8080 --server.address 0.0.0.0
