--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -2,7 +2,7 @@ version: 1.0
 runtime: python3
 build:
   commands:
-    prebuild:
+    pre-build:
       - python -m pip install --upgrade pip setuptools wheel
     build:
       - pip install --no-cache-dir -r requirements-apprunner.txt
