Modified .yaml file 3

--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -7,4 +7,4 @@ build:
     build:
       - pip install --no-cache-dir -r requirements-apprunner.txt
 run:
-  command: streamlit run streamlit_app.py --server.port 8080 --server.address 0.0.0.0
+  command: streamlit run streamlit_app.py --server.port 8080 --server.address 0.0.0.0 --server.headless true
