modified runtime back to python 3.11

--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,10 +1,12 @@
 version: 1.0
-runtime: python3
-build:
-  commands:
-    pre-build:
-      - python -m pip install --upgrade pip setuptools wheel
-    build:
-      - pip install --no-cache-dir -r requirements-apprunner.txt
+
+runtime: python311
+
 run:
+  runtime-version: 3.11
+
+  pre-run:
+    - pip3 install --upgrade pip setuptools wheel
+    - pip3 install --no-cache-dir -r requirements-apprunner.txt
+
   command: streamlit run streamlit_app.py --server.port 8080 --server.address 0.0.0.0 --server.headless true
