--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-# Pinned for reliable deployment on AWS App Runner (Python 3.11)
-# Streamlit cache_resource is supported
-streamlit==1.35.0
-
-# TensorFlow CPU compatible with Python 3.11
-tensorflow==2.16.1
-
-# Scientific stack aligned with TF 2.16
-numpy==1.26.4
-scipy==1.11.4
-matplotlib==3.8.4
-Pillow==10.3.0
-
-# Use headless OpenCV for server environments (no GUI/X11 deps)
-opencv-python-headless==4.9.0.80
+numpy>=1.19.5
+opencv-python>=4.5.1
+tensorflow>=2.6.0
+matplotlib>=3.3.4
+streamlit>=1.2.0
+Pillow>=8.3.1
+scipy>=1.5.4
